strange visual effect appears with ColorRamp node at Shader Editor. #64463

Closed
opened 2019-05-11 04:56:40 +02:00 by yuki arikawa · 14 comments

System Information
Operating system: Linux-4.15.0-48-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 660M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-09 17:55, hash: 427c75e4c2, 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-10 22:48, hash: b1af682001
Worked: newest 2.79 and previous 2.80 (2019-04-26) works fine.

Short description of error
strange visual effect appears with ColorRamp node at Shader Editor.
that/those effect (something like light ray) moving seems related with mouse position when node is active(focus).

Screenshot at 2019-05-11 11-24-37.png

Screenshot at 2019-05-11 11-25-16.png

Screenshot at 2019-05-11 11-28-34.png

Exact steps for others to reproduce the error

  1. open Shader Editor
  2. Add - Node - Converter - ColorRamp
**System Information** Operating system: Linux-4.15.0-48-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 660M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-09 17:55, hash: `427c75e4c2`, 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-10 22:48, hash: `b1af682001` Worked: newest 2.79 and previous 2.80 (2019-04-26) works fine. **Short description of error** strange visual effect appears with ColorRamp node at Shader Editor. that/those effect (something like light ray) moving seems related with mouse position when node is active(focus). ![Screenshot at 2019-05-11 11-24-37.png](https://archive.blender.org/developer/F7027187/Screenshot_at_2019-05-11_11-24-37.png) ![Screenshot at 2019-05-11 11-25-16.png](https://archive.blender.org/developer/F7027188/Screenshot_at_2019-05-11_11-25-16.png) ![Screenshot at 2019-05-11 11-28-34.png](https://archive.blender.org/developer/F7027189/Screenshot_at_2019-05-11_11-28-34.png) **Exact steps for others to reproduce the error** 1. open Shader Editor 2. Add - Node - Converter - ColorRamp
Author

Added subscriber: @moznoz

Added subscriber: @moznoz

#64532 was marked as duplicate of this issue

#64532 was marked as duplicate of this issue

#64465 was marked as duplicate of this issue

#64465 was marked as duplicate of this issue

#64429 was marked as duplicate of this issue

#64429 was marked as duplicate of this issue
Member

Added subscriber: @Harley

Added subscriber: @Harley
Harley Acheson self-assigned this 2019-05-11 05:33:21 +02:00
Member

This sure looks like it has to be related to:

https://developer.blender.org/rB98b67d30ffdf489912bbd325d5bc7f30da37efdd

Will look into it quickly but can always revert as it was very small change. Probably a quick fix.

This sure looks like it has to be related to: https://developer.blender.org/rB98b67d30ffdf489912bbd325d5bc7f30da37efdd Will look into it quickly but can always revert as it was very small change. Probably a quick fix.

Added subscribers: @MarcinTwarowski, @enenra

Added subscribers: @MarcinTwarowski, @enenra

Added subscriber: @user1

Added subscriber: @user1

Added subscriber: @Tysa

Added subscriber: @Tysa

can confirm that this has to do with Preferences -> Interface -> Resolution Scale

0.80 Fine
0.85 Bugged
0.90 Fine
0.95 Fine
1.00 Fine
1.05 Fine
1.10 Bugged
1.15 Fine
1.20 Bugged
1.25 Fine
1.30 Bugged
1.35 Fine
1.40 Bugged

Since i was running 1.20 which is bugged now, i change to 1.25 for now. Hope this little list can help someone.

can confirm that this has to do with Preferences -> Interface -> Resolution Scale 0.80 Fine 0.85 Bugged 0.90 Fine 0.95 Fine 1.00 Fine 1.05 Fine 1.10 Bugged 1.15 Fine 1.20 Bugged 1.25 Fine 1.30 Bugged 1.35 Fine 1.40 Bugged Since i was running 1.20 which is bugged now, i change to 1.25 for now. Hope this little list can help someone.
Member

@Tysa - Thanks for the detailed description and list. With the current code I can reproduce exactly what you are seeing as you describe.

And thanks to this report I can also confirm that my fix for this solves this problem. The fix was approved yesterday and is actually waiting for me to commit it. I will do so right away.

@Tysa - Thanks for the detailed description and list. With the current code I can reproduce exactly what you are seeing as you describe. And thanks to this report I can also confirm that my fix for this solves this problem. The fix was approved yesterday and is actually waiting for me to commit it. I will do so right away.

This issue was referenced by eff273c0bc

This issue was referenced by eff273c0bc31fa321c35e132949eb8a6062952dc
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @charbelm

Added subscriber: @charbelm
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64463
No description provided.